[package]
name = "agent-task-queue"
version = "0.1.0"
edition = "2021"
description = "Priority queue of agent tasks with status tracking"
license = "MIT"
repository = "https://github.com/MukundaKatta/agent-task-queue-rs"
keywords = ["llm", "agent", "queue", "tasks", "priority"]
categories = ["data-structures"]
exclude = ["target/*", ".github/*", "*.log"]

[dependencies]
serde_json = "1"
